--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Teste 1A</title>
 </head>
 <body>
-    nossa primeira aula ultilizando o github
-    conseeguimos gerar nossa primeira pagina
+    <h1>primeira aula ultilizando o github</h1>
+    <h2>gerar nossa primeira pagina</h2> 
 </body>
 </html>
